tests/e2e/unary_complex_3.error
Error: syntax error in story at line 3, column 6

3|    a = [! b, !2] <= ! (t + t)
           ^^^

E0122: `int` can't be converted to `boolean`
